test(util): добавлен тест LogFieldStorageTest
Добавлен тест LogFieldStorageTest, проверяющий содержание имен всех полей Log и Request в списке полей ALL_FIELDS в классе LogFieldStorage